--- a/social_auth_google.info.yml
+++ b/social_auth_google.info.yml
@@ -1,5 +1,5 @@
 name: Google Auth
-description: "Google user login module - OAuth2."
+description: "Google user login/registration module"
 core: 8.x
 type: module
 package: Social
