--- a/social_auth_google.info.yml
+++ b/social_auth_google.info.yml
@@ -1,5 +1,5 @@
-name: Google Auth
-description: "Google user login/registration module"
+name: Social Auth Google
+description: Social Auth integration for Google
 core: 8.x
 type: module
 package: Social
