Issue #2843078 by nikathone: Enclose service arguments in quotes

--- a/social_auth_google.services.yml
+++ b/social_auth_google.services.yml
@@ -2,4 +2,4 @@ services:
   google_auth.manager:
     class: Drupal\social_auth_google\GoogleAuthManager
     arguments:
-      - @request_stack
+      - '@request_stack'
