--- a/social_auth_google.info.yml
+++ b/social_auth_google.info.yml
@@ -3,5 +3,6 @@ description: Social Auth integration for Google
 core: 8.x
 type: module
 package: Social
+configure: social_auth_google.settings_form
 dependencies:
   - social_auth
