--- a/social_auth_google.services.yml
+++ b/social_auth_google.services.yml
@@ -1,5 +1,5 @@
 services:
-  google_auth.manager:
+  social_auth_google.manager:
     class: Drupal\social_auth_google\GoogleAuthManager
     arguments:
       - '@request_stack'
