--- a/social_auth_google.routing.yml
+++ b/social_auth_google.routing.yml
@@ -1,25 +1,25 @@
-social_auth_google.settings_form:
-  path: '/admin/config/social-api/social-auth/google'
-  defaults:
-    _title: 'Google Account Settings'
-    _form: 'Drupal\social_auth_google\Form\GoogleAuthSettingsForm'
-  requirements:
-    _permission: 'administer social api authentication'
-
 social_auth_google.redirect_to_google:
   path: 'user/login/google'
   defaults:
-    _controller: 'Drupal\social_auth_google\Controller\GoogleAuthController::redirectToGoogle'
+    _controller: '\Drupal\social_auth_google\Controller\GoogleAuthController::redirectToGoogle'
   requirements:
     _role: 'anonymous'
   options:
     no_cache: TRUE
 
 social_auth_google.callback:
-  path: '/user/login/google/callback'
+  path: 'user/login/google/callback'
   defaults:
-    _controller: 'Drupal\social_auth_google\Controller\GoogleAuthController::callback'
+    _controller: '\Drupal\social_auth_google\Controller\GoogleAuthController::callback'
   requirements:
     _role: 'anonymous'
   options:
     no_cache: TRUE
+
+social_auth_google.settings_form:
+  path: 'admin/config/social-api/social-auth/google'
+  defaults:
+    _title: 'Social Auth Google settings'
+    _form: '\Drupal\social_auth_google\Form\GoogleAuthSettingsForm'
+  requirements:
+    _permission: 'administer social api authentication'
