--- a/social_auth_google.services.yml
+++ b/social_auth_google.services.yml
@@ -2,4 +2,8 @@ services:
   social_auth_google.manager:
     class: Drupal\social_auth_google\GoogleAuthManager
     arguments:
-      - '@request_stack'
+      - '@logger.factory'
+      - '@event_dispatcher'
+      - '@entity_field.manager'
+      - '@url_generator.non_bubbling'
+      - '@config.factory'
