Allow associating a Google account to a logged in user

--- a/social_auth_google.routing.yml
+++ b/social_auth_google.routing.yml
@@ -3,7 +3,7 @@ social_auth_google.redirect_to_google:
   defaults:
     _controller: '\Drupal\social_auth_google\Controller\GoogleAuthController::redirectToGoogle'
   requirements:
-    _role: 'anonymous'
+    _access: 'TRUE'
   options:
     no_cache: TRUE
 
@@ -12,7 +12,7 @@ social_auth_google.callback:
   defaults:
     _controller: '\Drupal\social_auth_google\Controller\GoogleAuthController::callback'
   requirements:
-    _role: 'anonymous'
+    _access: 'TRUE'
   options:
     no_cache: TRUE
 
