--- a/social_auth_google.services.yml
+++ b/social_auth_google.services.yml
@@ -3,3 +3,4 @@ services:
     class: Drupal\social_auth_google\GoogleAuthManager
     arguments:
       - '@config.factory'
+      - '@logger.factory'
