--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "drupal-module",
     "description": "Social Auth integration for Google.",
     "keywords": ["Drupal"],
-    "license": "GPL-2.0+",
+    "license": "GPL-2.0-or-later",
     "homepage": "https://www.drupal.org/project/social_auth_google",
     "minimum-stability": "dev",
     "support": {
@@ -11,7 +11,8 @@
         "source": "http://cgit.drupalcode.org/social_auth_google"
     },
     "require": {
-        "league/oauth2-google": "^3.0"
+        "league/oauth2-google": "^3.0",
+        "drupal/social_auth": "^2.0"
     },
     "authors": [
         {
