--- a/social_auth_google.info.yml
+++ b/social_auth_google.info.yml
@@ -3,6 +3,7 @@ type: module
 description: 'Social Auth integration for Google.'
 package: Social
 core: 8.x
+core_version_requirement: ^8 || ^9
 configure: social_auth_google.settings_form
 dependencies:
   - social_auth:social_auth
